[gd_scene load_steps=2 format=3 uid="uid://np4pmti5spp7"]

[ext_resource type="Script" uid="uid://pwphjsvy271e" path="res://rotated_cd_scene.gd" id="1_808yo"]

[node name="RotatedDropSpot" type="Node2D"]
script = ExtResource("1_808yo")

[node name="cardSpot" type="Node2D" parent="."]
position = Vector2(353, 426)

[node name="dropareaSpot" type="Node2D" parent="."]
position = Vector2(788, 230)

[node name="Label" type="Label" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 375.0
offset_top = 21.0
offset_right = 786.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Rotated Drop spot"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 39.0
offset_top = 599.0
offset_right = 47.0
offset_bottom = 607.0
text = "Back"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
